Correction related to CCS tests